# libimghash-java

./: .gitignore  CMakeLists.txt  imghash.i  pom.xml
c/: imghash_wrap.cxx
debian/: changelog  control
jni/: imghash_wrap.cxx
src/c/: imghash_wrap.c  imghash_wrap.cxx
src/java/: imghash.java  imghashJNI.java
src/main/c/: imghash_wrap.cxx
src/main/java/: imghash.java  imghashJNI.java
src/main/ru/sociohub/imghash/: Main.java  NativeLoader.java  imghash.java  imghashJNI.java
src/ru/sociohub/imghash/: imghashJNI.java
